--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="画笔颜色"
+                        android:id="@+id/chip1"
                         android:onClick="pen_color"
                         android:textAppearance="?android:textAppearanceMedium" />
 
